--- a/SocialSPA/package.json
+++ b/SocialSPA/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.5",
